[project]
name = "packaged-app"
version = "0.1.0"
description = "A simple word manipulation package with CLI."
readme = "README.md"
authors = [
    { name = "Umar Qureshi", email = "102142660+umarmnaq@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "regex>=2025.7.34",
    "rich>=14.1.0",
    "typer>=0.16.1",
    "wordfreq>=3.1.1",
]

[project.scripts]
wordplay = "packaged_app.main:app"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
